Fixed circle size overflowing

--- a/scss/_circles.scss
+++ b/scss/_circles.scss
@@ -51,13 +51,13 @@
         position: relative;
         background-color: $grey-lightest;
         border-radius: 100%;
-        width: 400px;
-        height: 400px;
+        width: 350px;
+        height: 350px;
         margin: 0 auto;
         display: table;
         background-image: url("../images/inner-circle.png");
         background-repeat: no-repeat;
-        background-size: 365px;
+        background-size: 300px;
         background-position: center center;
 
         .cta {
