--- a/styles/style.css
+++ b/styles/style.css
@@ -2762,13 +2762,13 @@ select {
     position: relative;
     background-color: #E6E9ED;
     border-radius: 100%;
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     margin: 0 auto;
     display: table;
     background-image: url("../images/inner-circle.png");
     background-repeat: no-repeat;
-    background-size: 365px;
+    background-size: 300px;
     background-position: center center; }
     .circle-media-types .inner-circle .cta {
       position: relative;
